--- a/animation.html
+++ b/animation.html
@@ -13,10 +13,10 @@
 
 
 
-    <div class="aaa">
-        <div>
-            <img class="aks" src="/winter-night.jpg">
-            <span>Lorem ipsum dolor sit amet.</span>
+    <div class="box">
+        <div class="overly">
+            <img  src="/winter-night.jpg>"
+            <span class="span">Lorem ipsum dolor sit amet.</span>
         </div>
 
 
