--- a/animation.html
+++ b/animation.html
@@ -15,10 +15,12 @@
 
     <div class="box">
         <div class="overly">
-            <img  src="/winter-night.jpg>"
-            <span class="span">Lorem ipsum dolor sit amet.</span>
+            
+            <span class="box1">
+                <a href="#" target="_blank" title="site">Lorem ipsum dolor sit amet</a>
+            </span>
+            
         </div>
-
 
     </div>
 
